Introduce v1 API for Unleash instances and release channels (#430)
